# ayatori

./: .gitignore  AGENTS.md
.github/workflows/: graphrag-mcp-server-ci.yml
lib/graphrag-mcp-server/: .env.example  AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
lib/graphrag-mcp-server/docs/: api-reference.md  architecture.md  configuration.md  deployment.md  development.md  index.md
lib/graphrag-mcp-server/examples/: README.md  vscode-mcp-azure.json  vscode-mcp-ollama.json  vscode-mcp.json
lib/graphrag-mcp-server/src/graphrag_mcp_server/: __init__.py  __main__.py
lib/graphrag-mcp-server/src/graphrag_mcp_server/cli/: __init__.py  index.py  main.py  query.py  serve.py  stats.py
lib/graphrag-mcp-server/src/graphrag_mcp_server/config/: __init__.py  settings.py
lib/graphrag-mcp-server/src/graphrag_mcp_server/document_import/: __init__.py  correlation.py  importer.py  models.py  normalizer.py  parser.py
lib/graphrag-mcp-server/src/graphrag_mcp_server/document_import/chunker/: __init__.py  base.py  default.py  factory.py  japanese.py
lib/graphrag-mcp-server/src/graphrag_mcp_server/errors/: __init__.py  handlers.py
lib/graphrag-mcp-server/src/graphrag_mcp_server/handlers/: __init__.py  cache.py  formatters.py  import_handler.py  index.py  resources.py  search.py  streaming.py
lib/graphrag-mcp-server/src/graphrag_mcp_server/providers/: __init__.py  llm.py  vectorstore.py
lib/graphrag-mcp-server/src/graphrag_mcp_server/server/: __init__.py  app.py  prompts.py  resources.py  tools.py
lib/graphrag-mcp-server/steering/: product.md  structure.md  tech.md
lib/graphrag-mcp-server/tests/: __init__.py  conftest.py
lib/graphrag-mcp-server/tests/integration/: test_index.py  test_search.py  test_server.py
lib/graphrag-mcp-server/tests/unit/: test_cache.py  test_cli.py  test_config.py  test_errors.py  test_formatters.py  test_handlers_index.py  test_handlers_search.py  test_import_chunker.py  test_import_correlation.py  test_import_importer.py  test_import_models.py  test_import_normalizer.py  test_import_parser.py  test_package.py  test_prompts.py  test_providers_llm.py  test_providers_vectorstore.py  test_resources.py  test_server_app.py  test_streaming.py  test_tools.py
steering/: product.md  structure.md  tech.md
storage/features/: FEAT-001-graphrag-mcp-server.md  FEAT-002-document-import.md
storage/specs/: FEAT-001-design.md  FEAT-002-design.md
(+2 files in other folders)
